<resources>
    <string name="app_name">Proyecto</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="inscribirse">Inscribirse</string>
    <string name="title_activity_maps">Map</string>
    <string name="correo_contraseña_incorrecta">Correo o contraseña incorrecta</string>
    <string name="correo_invalido">Correo no valido</string>
    <string name="inscripcion_correcta">Inscripción correcta</string>
    <string name="sin_internet">No hay conexion a internet</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuracion</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="inicio">Inicio</string>
    <string name="final_">Final</string>
    <string name="tiempo">tiempo</string>
    <string name="salir">Salir</string>
    <string name="contraseña_corta">La contraseña debe tener entre 8 y 16 caracteres</string>
    <string name="no_se_pudo_conectar">No se pudo conectar</string>
    <string name="activar_cuenta">Aun no has activado tu cuenta</string>
    <string name="resivira_correo_confirmacion">Resivira un correo de activacion, favor de revisar su bandeja de entrada</string>
    <string name="perfil">Perfil</string>
    <string name="historial">Historial</string>
    <string name="comenzar">Comenzar</string>
    <string name="objetivos">Objetivos</string>
    <string name="velocidad">Velocidad</string>
    <string name="distancia">Distancia</string>
    <string name="fecha">Fecha</string>
    <string name="duracion">Duracion</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="elejir_fecha">Elije una fecha</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="guardar">Guardar</string>
    <string name="calorias">Calorias</string>
    <string name="regresar">Regresar</string>
    <string name="comenzar_correr">Empiece a correr cuando aparezca su posicion</string>
    <string name="posicion_actual">Posición actual</string>
    <string name="sin_trayectos">No tiene trayectos</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="ir_al_inicio">Ir al inicio</string>
    <string name="correo_registrado">Cuenta de correo registrada</string>
</resources>
