<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img1I"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@mipmap/mapaimg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFechaI"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="160dp"
                android:text="@string/fecha"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtDistanciaI"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="160dp"
                android:text="@string/distancia"
                android:textColor="#000"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/txtDuracionI"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="160dp"
                android:text="@string/duracion"
                android:textColor="#000"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/txtVelocidadI"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="160dp"
                android:text="@string/velocidad"
                android:textColor="#000"
                android:textSize="20dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
